# Whisper-ARS-Mac

./: .gitignore  CLAUDE.md  LESSONS_LEARNED.md  LICENSE  README.md  config.yaml  goal.md  pyproject.toml
docs/: PERMISSIONS.md
docs/superpowers/plans/: 2026-06-20-phase0-app-evaluation.md  2026-06-20-self-built-mvp.md
docs/superpowers/specs/: 2026-06-20-local-stt-design.md
phase0/: README.md  acceptance.md  app-selection.md
scripts/: build_app.sh  download_model.py  smoke_transcribe.py
src/whisper_dictation/: __init__.py  app.py  audio.py  config.py  hotkey.py  transcribe.py  typer.py
tests/: conftest.py  test_audio.py  test_config.py  test_hotkey.py  test_transcribe.py  test_typer.py
