[project]
name = "whisper-dictation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mlx-whisper>=0.4.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-ApplicationServices>=10.0",
    "pyyaml>=6.0",
    "pynput>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
whisper-dictation = "whisper_dictation.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
